--- a/app/views/Application/Index.html
+++ b/app/views/Application/Index.html
@@ -2,6 +2,7 @@
 {{template "header.html" .}}
 
 <h1>Your Application Is Ready</h1>
+<a href="/auth">Authentication</a>
 
 {{template "footer.html" .}}
 
